versions/0.8.0/_sources/refs/_aws-cdk_aws-cloudformation.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"nGn7bBv4ZqiVsYTIeNdCq/mXXSTADMHmQny2YPcH/iY="}

@aws-cdk/aws-cloudformation
===========================

.. mdinclude:: ./__aws-cdk_aws-cloudformation.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-cloudformation

WaitConditionData
^^^^^^^^^^^^^^^^^

.. py:class:: WaitConditionData([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-cloudformation.cloudformation

CustomResource
~~~~~~~~~~~~~~

.. py:class:: CustomResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CustomResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CustomResource``
   :type properties: :py:class:`~@aws-cdk/aws-cloudformation.cloudformation.CustomResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


CustomResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CustomResourceProps



   .. py:attribute:: serviceToken

      ``AWS::CloudFormation::CustomResource.ServiceToken``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cfn-customresource.html#cfn-customresource-servicetoken


      :type: string or :py:class:`@aws-cdk/cdk.Token`


StackResource
~~~~~~~~~~~~~

.. py:class:: StackResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``StackResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``StackResource``
   :type properties: :py:class:`~@aws-cdk/aws-cloudformation.cloudformation.StackResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


StackResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: StackResourceProps



   .. py:attribute:: templateUrl

      ``AWS::CloudFormation::Stack.TemplateURL``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-templateurl


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: notificationArns

      ``AWS::CloudFormation::Stack.NotificationARNs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-notificationarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: parameters

      ``AWS::CloudFormation::Stack.Parameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-parameters


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::CloudFormation::Stack.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: timeoutInMinutes

      ``AWS::CloudFormation::Stack.TimeoutInMinutes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-timeoutinminutes


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


WaitConditionHandleResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WaitConditionHandleResource(parent, name)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WaitConditionHandleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string

   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


WaitConditionResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WaitConditionResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WaitConditionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``WaitConditionResource``
   :type properties: :py:class:`~@aws-cdk/aws-cloudformation.cloudformation.WaitConditionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: waitConditionData

      :type: :py:class:`~@aws-cdk/aws-cloudformation.WaitConditionData` *(readonly)*


WaitConditionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WaitConditionResourceProps



   .. py:attribute:: handle

      ``AWS::CloudFormation::WaitCondition.Handle``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waitcondition.html#cfn-waitcondition-handle


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: timeout

      ``AWS::CloudFormation::WaitCondition.Timeout``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waitcondition.html#cfn-waitcondition-timeout


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: count

      ``AWS::CloudFormation::WaitCondition.Count``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waitcondition.html#cfn-waitcondition-count


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-cloudformation

