versions/0.8.1/_sources/refs/_aws-cdk_aws-cloudformation.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"ssbLKUHSNgSL6icYSmKeuTlyB1ku0nMRRSwGNmjguVk="}

@aws-cdk/aws-cloudformation
===========================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/cloudformation/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:cloudformation:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="cloudformation" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>cloudformation</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:cloudformation:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='cloudformation', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cloudformation/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cloudformation@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cloudformation": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cloudformation@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cloudformation/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cloudformation@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cloudformation": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cloudformation@0.8.1



.. mdinclude:: ./__aws-cdk_aws-cloudformation.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-cloudformation

WaitConditionData
^^^^^^^^^^^^^^^^^

.. py:class:: WaitConditionData([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.WaitConditionData;

      .. code-tab:: javascript

         const { WaitConditionData } = require('@aws-cdk/aws-cloudformation');

      .. code-tab:: typescript

         import { WaitConditionData } from '@aws-cdk/aws-cloudformation';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-cloudformation.cloudformation

CustomResource
~~~~~~~~~~~~~~

.. py:class:: CustomResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.cloudformation.CustomResource;

      .. code-tab:: javascript

         const { cloudformation.CustomResource } = require('@aws-cdk/aws-cloudformation');

      .. code-tab:: typescript

         import { cloudformation.CustomResource } from '@aws-cdk/aws-cloudformation';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CustomResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CustomResource``
   :type properties: :py:class:`~@aws-cdk/aws-cloudformation.cloudformation.CustomResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


CustomResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CustomResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.cloudformation.CustomResourceProps;

      .. code-tab:: javascript

         // cloudformation.CustomResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CustomResourceProps } from '@aws-cdk/aws-cloudformation';





   .. py:attribute:: serviceToken

      ``AWS::CloudFormation::CustomResource.ServiceToken``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cfn-customresource.html#cfn-customresource-servicetoken


      :type: string or :py:class:`@aws-cdk/cdk.Token`


StackResource
~~~~~~~~~~~~~

.. py:class:: StackResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.cloudformation.StackResource;

      .. code-tab:: javascript

         const { cloudformation.StackResource } = require('@aws-cdk/aws-cloudformation');

      .. code-tab:: typescript

         import { cloudformation.StackResource } from '@aws-cdk/aws-cloudformation';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``StackResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``StackResource``
   :type properties: :py:class:`~@aws-cdk/aws-cloudformation.cloudformation.StackResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


StackResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: StackResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.cloudformation.StackResourceProps;

      .. code-tab:: javascript

         // cloudformation.StackResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.StackResourceProps } from '@aws-cdk/aws-cloudformation';





   .. py:attribute:: templateUrl

      ``AWS::CloudFormation::Stack.TemplateURL``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-templateurl


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: notificationArns

      ``AWS::CloudFormation::Stack.NotificationARNs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-notificationarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: parameters

      ``AWS::CloudFormation::Stack.Parameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-parameters


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::CloudFormation::Stack.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: timeoutInMinutes

      ``AWS::CloudFormation::Stack.TimeoutInMinutes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-stack.html#cfn-cloudformation-stack-timeoutinminutes


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


WaitConditionHandleResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WaitConditionHandleResource(parent, name)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.cloudformation.WaitConditionHandleResource;

      .. code-tab:: javascript

         const { cloudformation.WaitConditionHandleResource } = require('@aws-cdk/aws-cloudformation');

      .. code-tab:: typescript

         import { cloudformation.WaitConditionHandleResource } from '@aws-cdk/aws-cloudformation';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WaitConditionHandleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string

   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


WaitConditionResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WaitConditionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.cloudformation.WaitConditionResource;

      .. code-tab:: javascript

         const { cloudformation.WaitConditionResource } = require('@aws-cdk/aws-cloudformation');

      .. code-tab:: typescript

         import { cloudformation.WaitConditionResource } from '@aws-cdk/aws-cloudformation';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WaitConditionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``WaitConditionResource``
   :type properties: :py:class:`~@aws-cdk/aws-cloudformation.cloudformation.WaitConditionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: waitConditionData

      :type: :py:class:`~@aws-cdk/aws-cloudformation.WaitConditionData` *(readonly)*


WaitConditionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WaitConditionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudformation.cloudformation.WaitConditionResourceProps;

      .. code-tab:: javascript

         // cloudformation.WaitConditionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.WaitConditionResourceProps } from '@aws-cdk/aws-cloudformation';





   .. py:attribute:: handle

      ``AWS::CloudFormation::WaitCondition.Handle``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waitcondition.html#cfn-waitcondition-handle


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: timeout

      ``AWS::CloudFormation::WaitCondition.Timeout``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waitcondition.html#cfn-waitcondition-timeout


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: count

      ``AWS::CloudFormation::WaitCondition.Count``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waitcondition.html#cfn-waitcondition-count


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-cloudformation

